--- a/mod2_solution/css/styles.css
+++ b/mod2_solution/css/styles.css
@@ -28,7 +28,8 @@ section {
 
 .menuItem {
 	background-color: #b3b3b3;
-	margin-right: 20px;
+	margin-right: 10px;
+	margin-left: 10px;
 	border: 1px solid black;
 	position: relative;
 	margin-bottom: 20px;
